fixes #313, fixed wrong padding

--- a/app/assets/stylesheets/io_import.css.scss
+++ b/app/assets/stylesheets/io_import.css.scss
@@ -349,7 +349,7 @@ $wide_input_width: 480px;
       }
     }
 
-    > div.lineitem-sizes, > div.li-sizes {
+    > div.lineitem-sizes .editable, > div.li-sizes .editable{
       padding-right: 7px;
     }
   }
